no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 903fa33feb357df89ed34184f309a4b6fca54d65

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-de/strings.xml
@@ -3260,8 +3260,59 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Keine
+Internetverbindung
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Anscheinend
+gibt
+es
+ein
+Problem
+mit
+Ihrer
 Internetverbindung
 <
 /
@@ -3297,6 +3348,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 berpr
 fen
@@ -3315,6 +3380,106 @@ neu
 zu
 laden
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Versuchen
+Sie
+auf
+einem
+anderen
+Ger
+t
+eine
+Verbindung
+herzustellen
+.
+berpr
+fen
+Sie
+Ihr
+Modem
+oder
+Router
+.
+Trennen
+Sie
+die
+WLAN
+-
+Verbindung
+und
+stellen
+Sie
+die
+Verbindung
+wieder
+her
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Fehlercode
+:
+NS_ERROR_OFFLINE
 <
 /
 string
