--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-dsb/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-dsb/strings.xml
@@ -3396,10 +3396,63 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 eden
 internetny
 zwisk
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Zda
+se
+a
+jo
+problem
+z
+wa
+ym
+internetnym
+zwiskom
 <
 /
 string
@@ -3434,6 +3487,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 P
 egl
@@ -3455,6 +3522,103 @@ wokognu
 ow
 znowego
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Wopytaj
+o
+z
+drugim
+r
+dom
+zw
+za
+.
+P
+egl
+daj
+o
+sw
+j
+modem
+abo
+router
+.
+l
+o
+zwisk
+WLAN
+a
+zw
+o
+znowego
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Zm
+lkowy
+kod
+:
+NS_ERROR_OFFLINE
 <
 /
 string
