--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-es-rAR/strings.xml
@@ -3289,8 +3289,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sin
+conexi
+n
+a
+Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+hay
+un
+problema
+con
+la
 conexi
 n
 a
@@ -3329,6 +3383,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verific
 tu
@@ -3349,6 +3417,98 @@ en
 un
 ratito
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Prob
+conectarte
+a
+un
+dispositivo
+diferente
+.
+Verific
+tu
+m
+dem
+o
+router
+.
+Desconect
+y
+volv
+a
+conectarte
+al
+wifi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+error
+:
+NS_ERROR_OFFLINE
 <
 /
 string
