--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fi/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fi/strings.xml
@@ -2974,9 +2974,61 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ei
 internetyhteytt
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Vaikuttaa
+silt
+ett
+Internet
+-
+yhteydess
+si
+on
+ongelma
 <
 /
 string
@@ -3011,6 +3063,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tarkista
 verkkoyhteys
@@ -3022,6 +3088,95 @@ sivu
 hetken
 kuluttua
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Yrit
+muodostaa
+yhteys
+toisella
+laitteella
+.
+Tarkista
+modeemi
+tai
+reititin
+.
+Katkaise
+Wi
+-
+Fi
+-
+yhteys
+ja
+yhdist
+se
+uudelleen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Virhekoodi
+:
+NS_ERROR_OFFLINE
 <
 /
 string
