--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gd/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gd/strings.xml
@@ -3567,10 +3567,69 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chan
 eil
 ceangal
+ris
+an
+eadar
+-
+l
+on
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Tha
+coltas
+gu
+bheil
+duilgheadas
+ann
+leis
+a
+cheangal
+agad
 ris
 an
 eadar
@@ -3611,6 +3670,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Thoir
 s
@@ -3637,6 +3710,108 @@ tiotan
 no
 dh
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Feuch
+is
+d
+an
+ceangal
+air
+uidheam
+eile
+.
+Thoir
+s
+il
+air
+a
+mh
+dam
+no
+r
+tar
+agad
+.
+D
+-
+cheangail
+on
+WiFi
+is
+ceangail
+ris
+as
+r
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+d
+na
+mearachd
+:
+NS_ERROR_OFFLINE
 <
 /
 string
