--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gl/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-gl/strings.xml
@@ -3253,12 +3253,67 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Non
 hai
 conexi
 n
 internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+hai
+un
+problema
+coa
+t
+a
+conexi
+n
+a
+Internet
 <
 /
 string
@@ -3293,6 +3348,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Comprobe
 a
@@ -3313,6 +3382,97 @@ xina
 nuns
 instantes
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Probe
+a
+conectar
+nun
+dispositivo
+diferente
+.
+Comprobe
+o
+seu
+m
+dem
+ou
+router
+.
+Desconecte
+e
+volva
+conectar
+wifi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+erro
+:
+NS_ERROR_OFFLINE
 <
 /
 string
