--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-hsb/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-hsb/strings.xml
@@ -3305,10 +3305,63 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 adyn
 internetny
 zwisk
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Zda
+so
+zo
+je
+problem
+z
+wa
+im
+internetnym
+zwiskom
 <
 /
 string
@@ -3343,6 +3396,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 P
 epruwuj
@@ -3363,6 +3430,100 @@ o
 wokomikow
 znowa
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Spytaj
+e
+z
+druhim
+gratom
+zwjaza
+.
+P
+epruwuj
+e
+sw
+j
+modem
+abo
+router
+.
+D
+l
+e
+zwisk
+WLAN
+a
+zwjazaj
+e
+znowa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Zmylkowy
+kod
+:
+NS_ERROR_OFFLINE
 <
 /
 string
