--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-is/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-is/strings.xml
@@ -3287,10 +3287,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Engin
 internet
 tenging
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+a
+vir
+ist
+vera
+vandam
+l
+me
+nettenginguna
+na
 <
 /
 string
@@ -3325,6 +3377,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Athuga
 u
@@ -3344,6 +3410,101 @@ m
 n
 tur
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Pr
+fa
+u
+a
+tengjast
+ru
+t
+ki
+.
+Athuga
+u
+m
+taldi
+itt
+e
+a
+beininn
+.
+Aftengdu
+og
+tengdu
+aftur
+vi
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Villuk
+i
+:
+NS_ERROR_OFFLINE
 <
 /
 string
