--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-kab/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-kab/strings.xml
@@ -3355,9 +3355,60 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ulac
 tuqqna
+Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Yettban
+yella
+wugur
+akked
+tuqqna
+-
+k
 Internet
 <
 /
@@ -3393,6 +3444,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Senqed
 tuqqna
@@ -3412,6 +3477,98 @@ kra
 n
 wakud
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+re
+ad
+teqqne
+ef
+yibenk
+ni
+en
+.
+Senqed
+amudam
+-
+ik
+.
+Sens
+syen
+ales
+tuqqna
+er
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Tangalt
+n
+tucc
+a
+:
+NS_ERROR_OFFLINE
 <
 /
 string
