--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nl/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nl/strings.xml
@@ -3190,8 +3190,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Geen
+internetverbinding
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Het
+lijkt
+erop
+dat
+er
+een
+probleem
+is
+met
+uw
 internetverbinding
 <
 /
@@ -3227,6 +3281,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Controleer
 uw
@@ -3242,6 +3310,96 @@ opnieuw
 te
 laden
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Probeer
+verbinding
+te
+maken
+op
+een
+ander
+apparaat
+.
+Controleer
+uw
+modem
+of
+router
+.
+Verbreek
+uw
+wifiverbinding
+en
+maak
+opnieuw
+verbinding
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Foutcode
+:
+NS_ERROR_OFFLINE
 <
 /
 string
