--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-tr/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-tr/strings.xml
@@ -3257,12 +3257,64 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 nternet
 ba
 lant
 s
 yok
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+nternet
+ba
+lant
+n
+zla
+ilgili
+bir
+sorun
+var
 <
 /
 string
@@ -3297,6 +3349,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 ba
@@ -3313,6 +3379,101 @@ sayfay
 tazelemeyi
 deneyin
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Farkl
+bir
+cihazdan
+ba
+lanmay
+deneyin
+.
+Modeminizi
+veya
+y
+nlendiricinizi
+kontrol
+edin
+.
+Wi
+-
+Fi
+ba
+lant
+n
+z
+kesip
+yeniden
+ba
+lan
+n
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Hata
+Kodu
+:
+NS_ERROR_OFFLINE
 <
 /
 string
