--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-fur/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-fur/strings.xml
@@ -347,54 +347,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-No
-sta
-salv
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-new
-or
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_save_2
 "
 >
@@ -526,52 +478,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-No
-sta
-inzorn
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_update_2
 "
 >
@@ -636,61 +542,6 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Il
-cjamp
-de
-password
-nol
-di
-sei
-vueit
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-password
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_error_empty_password_2
 "
 >
@@ -698,58 +549,6 @@ Inser
 s
 une
 password
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-login
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_error_unknown_cause
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Impussibil
-salv
-lis
-credenzi
-ls
 <
 /
 string
@@ -787,70 +586,6 @@ Impussibil
 salv
 la
 password
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-username
-and
-password
-and
-user
-decides
-if
-app
-should
-save
-the
-new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_save_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Salv
-cheste
-credenzi
-l
-?
 <
 /
 string
@@ -933,71 +668,6 @@ app
 should
 update
 the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_update_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Inzorn
-cheste
-credenzi
-l
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-password
-for
-an
-existing
-login
-and
-user
-decides
-if
-app
-should
-update
-the
 password
 .
 -
@@ -1014,76 +684,6 @@ mozac_feature_prompt_login_update_headline_2
 Inzorn
 la
 password
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Zont
-il
-non
-utent
-ae
-password
-salvade
 ?
 <
 /
@@ -2029,54 +1629,6 @@ Option
 in
 expanded
 select
-login
-prompt
-that
-links
-to
-login
-settings
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Gjest
-s
-credenzi
-ls
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-expanded
-select
 password
 prompt
 that
@@ -2098,57 +1650,6 @@ mozac_feature_prompts_manage_logins_2
 Gjest
 s
 passwords
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Slargje
-lis
-credenzi
-ls
-sugjeridis
 <
 /
 string
@@ -2199,57 +1700,6 @@ for
 collapsing
 the
 saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Comprim
-lis
-credenzi
-ls
-sugjeridis
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
 passwords
 options
 in
@@ -2272,59 +1722,6 @@ Stren
 lis
 passwords
 salvadis
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
-login
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-login
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_saved_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Credenzi
-ls
-sugjeridis
 <
 /
 string
@@ -2400,62 +1797,6 @@ name
 =
 "
 mozac_feature_prompts_suggest_strong_password_content_description
-"
->
-Sugjer
-s
-password
-complesse
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-suggest
-strong
-password
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-suggested
-strong
-password
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_suggest_strong_password
-"
-moz
-:
-removedIn
-=
-"
-128
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Sugjer
@@ -2607,14 +1948,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
 "
 moz
 :
 removedIn
 =
 "
-130
+133
 "
 tools
 :
@@ -2639,16 +1980,15 @@ t
 casu
 l
 .
-Dopre
-daurman
-lis
-t
-s
-passwords
-salvantlis
+E
+vignar
+salvade
 tal
 to
 account
+par
+un
+doman
 .
 <
 /
@@ -2675,7 +2015,7 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description_2
+mozac_feature_prompts_suggest_strong_password_description_3
 "
 >
 Prot
@@ -3035,63 +2375,6 @@ Header
 for
 the
 select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Selezione
-cjarte
-di
-credit
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
 card
 prompt
 to
@@ -3120,63 +2403,6 @@ mozac_feature_prompts_select_credit_card_2
 Dopre
 cjarte
 salvade
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Slargje
-la
-liste
-des
-cjartis
-di
-credit
-sugjeridis
 <
 /
 string
@@ -3227,62 +2453,6 @@ description
 for
 collapsing
 the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Comprim
-la
-liste
-des
-cjartis
-di
-credit
-sugjeridis
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
 saved
 card
 options
@@ -3306,59 +2476,6 @@ Stren
 lis
 cjartis
 salvadis
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-the
-expanded
-select
-credit
-card
-prompt
-that
-links
-to
-credit
-cards
-settings
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_credit_cards
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Gjest
-s
-cjartis
-di
-credit
 <
 /
 string
@@ -3485,70 +2602,6 @@ the
 title
 of
 the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Il
-numar
-de
-cjarte
-al
-sar
-cifr
-t
-.
-Il
-codi
-di
-sigurece
-nol
-vignar
-salv
-t
-.
-<
-/
-string
->
-<
-!
--
--
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
 saved
 card
 dialog
@@ -3651,58 +2704,6 @@ description
 for
 expanding
 the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Slargje
-i
-recapits
-sugjer
-ts
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
 saved
 addresses
 options
@@ -3727,57 +2728,6 @@ Slargje
 lis
 direzions
 salvadis
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Comprim
-recapits
-sugjer
-ts
 <
 /
 string
@@ -4098,6 +3048,13 @@ name
 =
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
