--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -7469,6 +7469,20 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 An
 t
@@ -7476,6 +7490,64 @@ t
 einnsean
 -
 luirg
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+An
+t
+-
+einnsean
+-
+luirg
+:
 %
 s
 <
@@ -9414,13 +9486,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 R
 raich
@@ -9457,13 +9522,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 T
@@ -9918,6 +9976,168 @@ l
 n
 mhobile
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+L
+irmheasan
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+omhaigheag
+an
+tuilleadain
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Am
+putan
+airson
+tuilleadan
+a
+chur
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Rangaichte
+%
+1
+s
+5
 <
 /
 string
@@ -23392,6 +23612,78 @@ string
 Content
 description
 for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Sguab
+an
+comharra
+-
+l
+n
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Sguab
+am
+pasgan
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
 bookmark
 search
 floating
@@ -31723,9 +32015,10 @@ name
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
-Lorgaichean
+Lorgairean
 -
-meur
+me
+ir
 as
 aithne
 dhuinn
@@ -32747,11 +33040,101 @@ name
 etp_suspected_fingerprinters_title
 "
 >
-Lorgaichean
+Lorgairean
 -
-meur
+me
+ir
 fo
 amharas
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+of
+fingerprinters
+that
+can
+be
+blocked
+by
+fingerprinting
+protection
+-
+-
+>
+<
+string
+name
+=
+"
+etp_suspected_fingerprinters_description
+"
+>
+Cuiridh
+seo
+an
+d
+on
+airson
+lorgan
+-
+me
+ir
+airson
+stad
+a
+chur
+air
+lorgairean
+-
+me
+ir
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+of
+trackers
+(
+fingerprinters
+)
+that
+can
+be
+blocked
+by
+Enhanced
+Tracking
+Protection
+-
+-
+>
+<
+string
+name
+=
+"
+etp_known_fingerprinters_title
+"
+>
+Lorgairean
+-
+me
+ir
+as
+aithne
+dhuinn
 <
 /
 string
@@ -33591,6 +33974,75 @@ string
 -
 -
 Preference
+for
+managing
+the
+settings
+for
+logins
+and
+passwords
+in
+Fenix
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_logins_and_passwords_2
+"
+>
+Faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+managing
+the
+saving
+of
+logins
+and
+passwords
+in
+Fenix
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_save_logins_2
+"
+>
+S
+bhail
+na
+faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 option
 for
 asking
@@ -33889,6 +34341,36 @@ string
 -
 -
 Preference
+option
+for
+adding
+a
+password
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_logins_add_login_2
+"
+>
+Cuir
+facal
+-
+faire
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 for
 syncing
 saved
@@ -33948,6 +34430,39 @@ faire
 air
 feadh
 uidheaman
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+to
+access
+list
+of
+saved
+passwords
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_saved_logins_2
+"
+>
+Faclan
+-
+faire
+a
+sh
+bhail
+thu
 <
 /
 string
