--- a/mobile/android/fenix/app/src/main/res/values-lo/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-lo/strings.xml
@@ -744,84 +744,6 @@ string
 !
 -
 -
-Home
--
-Recently
-saved
-bookmarks
--
--
->
-<
-!
--
--
-Title
-for
-the
-home
-screen
-section
-with
-recently
-saved
-bookmarks
-.
--
--
->
-<
-string
-name
-=
-"
-recently_saved_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-button
-which
-navigates
-the
-user
-to
-show
-all
-of
-their
-saved
-bookmarks
-.
--
--
->
-<
-string
-name
-=
-"
-recently_saved_show_all_content_description_2
-"
->
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -848,7 +770,7 @@ string
 name
 =
 "
-recently_saved_menu_item_remove
+home_bookmarks_menu_item_remove
 "
 >
 <
@@ -1264,6 +1186,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 .
 <
@@ -1300,6 +1236,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -1807,7 +1757,7 @@ action
 to
 open
 Passwords
-screens
+screen
 -
 -
 >
@@ -1816,7 +1766,7 @@ string
 name
 =
 "
-home_screen_shortcut_open_password_screen
+home_screen_shortcut_passwords
 "
 >
 <
@@ -2364,36 +2314,6 @@ menu
 button
 that
 opens
-the
-addon
-manager
--
--
->
-<
-string
-name
-=
-"
-browser_menu_add_ons
-"
->
-Add
--
-ons
-<
-/
-string
->
-<
-!
--
--
-Browser
-menu
-button
-that
-opens
 account
 settings
 -
@@ -2407,40 +2327,6 @@ name
 browser_menu_account_settings
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-when
-there
-are
-no
-add
--
-ons
-to
-be
-shown
--
--
->
-<
-string
-name
-=
-"
-no_add_ons
-"
->
-add
--
-ons
 <
 /
 string
@@ -2619,44 +2505,6 @@ name
 =
 "
 browser_menu_add_to_homescreen
-"
->
-<
-/
-string
->
-<
-!
--
--
-Browser
-menu
-toggle
-that
-installs
-a
-Progressive
-Web
-App
-shortcut
-to
-the
-site
-on
-the
-device
-home
-screen
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_install_on_homescreen
 "
 >
 <
@@ -3340,6 +3188,20 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -3725,6 +3587,13 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 %
 s
@@ -3769,6 +3638,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 .
@@ -4070,232 +3946,6 @@ name
 =
 "
 onboarding_home_content_description_close_button
-"
->
-<
-/
-string
->
-<
-!
--
--
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
->
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
->
-%
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -5071,6 +4721,20 @@ name
 =
 "
 preferences_site_permissions
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -6126,33 +5790,6 @@ string
 Preference
 for
 changing
-where
-the
-toolbar
-is
-positioned
--
--
->
-<
-string
-name
-=
-"
-preferences_toolbar
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-changing
 default
 theme
 to
@@ -6875,31 +6512,6 @@ string
 -
 Preference
 for
-add_ons
--
--
->
-<
-string
-name
-=
-"
-preferences_addons
-"
->
-Add
--
-ons
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
 notifications
 -
 -
@@ -6967,53 +6579,6 @@ name
 notifications_not_allowed_summary
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Add
--
-on
-Preferences
--
--
->
-<
-!
--
--
-Preference
-to
-customize
-the
-configured
-AMO
-(
-addons
-.
-mozilla
-.
-org
-)
-collection
--
--
->
-<
-string
-name
-=
-"
-preferences_customize_amo_collection
-"
->
-Add
--
-on
 <
 /
 string
@@ -7139,40 +6704,6 @@ string
 !
 -
 -
-Toast
-shown
-after
-confirming
-the
-custom
-add
--
-on
-collection
-configuration
--
--
->
-<
-string
-name
-=
-"
-toast_customize_addon_collection_done
-"
->
-Add
--
-on
-.
-<
-/
-string
->
-<
-!
--
--
 Customize
 Home
 -
@@ -7205,37 +6736,6 @@ name
 =
 "
 customize_toggle_jump_back_in
-"
->
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-customize
-home
-screen
-section
-with
-recently
-saved
-bookmarks
-.
--
--
->
-<
-string
-name
-=
-"
-customize_toggle_recent_bookmarks
 "
 >
 <
@@ -7936,29 +7436,6 @@ string
 Preference
 for
 syncing
-logins
--
--
->
-<
-string
-name
-=
-"
-preferences_sync_logins
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-syncing
 tabs
 -
 -
@@ -8286,30 +7763,6 @@ string
 Preference
 for
 syncing
-credit
-cards
--
--
->
-<
-string
-name
-=
-"
-preferences_sync_credit_cards
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-syncing
 addresses
 -
 -
@@ -8411,6 +7864,13 @@ name
 =
 "
 fxa_received_tab_channel_description
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -9138,35 +8598,6 @@ name
 =
 "
 preference_gestures_dynamic_toolbar
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-switching
-tabs
-by
-swiping
-horizontally
-on
-the
-toolbar
--
--
->
-<
-string
-name
-=
-"
-preference_gestures_swipe_toolbar_switch_tabs
 "
 >
 <
@@ -11858,35 +11289,6 @@ name
 =
 "
 collection_name_hint
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
 "
 >
 <
@@ -16142,6 +15544,13 @@ name
 "
 sync_connect_device_dialog
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 1
@@ -16440,6 +15849,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -16500,6 +15910,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -16804,6 +16215,13 @@ name
 =
 "
 nimbus_survey_message_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -17397,99 +16815,6 @@ string
 !
 -
 -
-Collection
-and
-tab
-deletion
-prompt
-dialog
-message
-.
-This
-will
-show
-when
-the
-last
-tab
-from
-a
-collection
-is
-deleted
--
--
->
-<
-string
-name
-=
-"
-delete_tab_and_collection_dialog_message
-"
->
-.
-.
-<
-/
-string
->
-<
-!
--
--
-Collection
-and
-tab
-deletion
-prompt
-dialog
-title
-.
-Placeholder
-will
-be
-replaced
-with
-the
-collection
-name
-.
-This
-will
-show
-when
-the
-last
-tab
-from
-a
-collection
-is
-deleted
--
--
->
-<
-string
-name
-=
-"
-delete_tab_and_collection_dialog_title
-"
->
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
 Tab
 collection
 deletion
@@ -17509,37 +16834,6 @@ name
 =
 "
 tab_collection_dialog_positive
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
 "
 >
 <
@@ -18180,51 +17474,6 @@ string
 name
 =
 "
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-(
-)
-.
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
 delete_history_prompt_body_2
 "
 >
@@ -18642,6 +17891,14 @@ string
 !
 -
 -
+Onboarding
+-
+-
+>
+<
+!
+-
+-
 text
 to
 display
@@ -18669,6 +17926,15 @@ Sync
 <
 /
 string
+>
+<
+!
+-
+-
+Onboarding
+theme
+-
+-
 >
 <
 !
@@ -18842,6 +18108,13 @@ name
 "
 sign_in_instructions
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 !
@@ -18986,6 +18259,13 @@ name
 =
 "
 sign_in_create_account_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -19938,35 +19218,6 @@ string
 !
 -
 -
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
->
-<
-/
-string
->
-<
-!
--
--
 Button
 label
 for
@@ -20331,70 +19582,6 @@ name
 =
 "
 etp_cryptominers_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
 "
 >
 .
@@ -21419,66 +20606,6 @@ string
 -
 -
 Preference
-for
-managing
-the
-settings
-for
-logins
-and
-passwords
-in
-Fenix
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_logins_and_passwords
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-managing
-the
-saving
-of
-logins
-and
-passwords
-in
-Fenix
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_save_logins
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
 option
 for
 asking
@@ -21706,179 +20833,6 @@ string
 -
 -
 Preference
-option
-for
-adding
-a
-login
--
--
->
-<
-string
-name
-=
-"
-preferences_logins_add_login
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-syncing
-saved
-logins
-in
-Fenix
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_sync_logins
-"
->
-Sync
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-syncing
-saved
-logins
-in
-Fenix
-when
-not
-signed
-in
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_sync_logins_across_devices
-"
->
-Sync
-<
-/
-string
->
-<
-!
--
--
-Preference
-to
-access
-list
-of
-saved
-logins
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_saved_logins
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-empty
-list
-of
-saved
-passwords
-.
-Placeholder
-is
-replaced
-with
-app
-name
-.
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_saved_logins_description_empty_text
-"
->
-sync
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Preference
-to
-access
-list
-of
-saved
-logins
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_saved_logins_description_empty_learn_more_link
-"
->
-Sync
-<
-/
-string
->
-<
-!
--
--
-Preference
 to
 access
 list
@@ -21910,69 +20864,6 @@ string
 !
 -
 -
-Empty
-description
-of
-list
-of
-login
-exceptions
-that
-we
-never
-save
-logins
-for
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_exceptions_description_empty
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-list
-of
-login
-exceptions
-that
-we
-never
-save
-logins
-for
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_exceptions_description
-"
->
-<
-/
-string
->
-<
-!
--
--
 Text
 on
 button
@@ -21991,32 +20882,6 @@ name
 =
 "
 preferences_passwords_exceptions_remove_all
-"
->
-<
-/
-string
->
-<
-!
--
--
-Hint
-for
-search
-box
-in
-logins
-list
--
--
->
-<
-string
-name
-=
-"
-preferences_passwords_saved_logins_search
 "
 >
 <
@@ -22469,103 +21334,6 @@ string
 !
 -
 -
-Message
-displayed
-in
-biometric
-prompt
-displayed
-for
-authentication
-before
-allowing
-users
-to
-view
-their
-logins
--
--
->
-<
-string
-name
-=
-"
-logins_biometric_prompt_message
-"
->
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-warning
-dialog
-if
-users
-have
-no
-device
-authentication
-set
-up
--
--
->
-<
-string
-name
-=
-"
-logins_warning_dialog_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Message
-of
-warning
-dialog
-if
-users
-have
-no
-device
-authentication
-set
-up
--
--
->
-<
-string
-name
-=
-"
-logins_warning_dialog_message
-"
->
-PIN
-<
-/
-string
->
-<
-!
--
--
 Negative
 button
 to
@@ -22816,44 +21584,6 @@ string
 !
 -
 -
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Sort
-saved
-logins
-dropdown
-menu
-chevron
-icon
--
--
->
-<
-string
-name
-=
-"
-saved_logins_menu_dropdown_chevron_icon_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
 Autofill
 -
 -
@@ -22907,89 +21637,6 @@ name
 =
 "
 preferences_addresses
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-and
-title
-for
-managing
-the
-settings
-for
-credit
-cards
--
--
->
-<
-string
-name
-=
-"
-preferences_credit_cards
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-saving
-and
-autofilling
-credit
-cards
--
--
->
-<
-string
-name
-=
-"
-preferences_credit_cards_save_and_autofill_cards
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-summary
-for
-saving
-and
-autofilling
-credit
-card
-data
--
--
->
-<
-string
-name
-=
-"
-preferences_credit_cards_save_and_autofill_cards_summary
 "
 >
 <
@@ -23083,58 +21730,6 @@ Preference
 option
 for
 adding
-a
-credit
-card
--
--
->
-<
-string
-name
-=
-"
-preferences_credit_cards_add_credit_card
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-option
-for
-managing
-saved
-credit
-cards
--
--
->
-<
-string
-name
-=
-"
-preferences_credit_cards_manage_saved_cards
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-option
-for
-adding
 an
 address
 -
@@ -23173,59 +21768,6 @@ name
 preferences_addresses_manage_addresses
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-saving
-and
-autofilling
-addresses
--
--
->
-<
-string
-name
-=
-"
-preferences_addresses_save_and_autofill_addresses
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-summary
-for
-saving
-and
-autofilling
-address
-data
--
--
->
-<
-string
-name
-=
-"
-preferences_addresses_save_and_autofill_addresses_summary
-"
->
-:
 <
 /
 string
@@ -23517,38 +22059,6 @@ The
 text
 for
 the
-confirmation
-message
-of
-"
-Delete
-card
-"
-dialog
--
--
->
-<
-string
-name
-=
-"
-credit_cards_delete_dialog_confirmation
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
-The
-text
-for
-the
 positive
 button
 on
@@ -23704,60 +22214,6 @@ string
 !
 -
 -
-Error
-message
-for
-credit
-card
-number
-validation
--
--
->
-<
-string
-name
-=
-"
-credit_cards_number_validation_error_message
-"
->
-<
-/
-string
->
-<
-!
--
--
-Error
-message
-for
-credit
-card
-name
-on
-card
-validation
--
--
->
-<
-string
-name
-=
-"
-credit_cards_name_on_card_validation_error_message
-"
->
-<
-/
-string
->
-<
-!
--
--
 Message
 displayed
 in
@@ -23786,70 +22242,6 @@ name
 credit_cards_biometric_prompt_message
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-warning
-dialog
-if
-users
-have
-no
-device
-authentication
-set
-up
--
--
->
-<
-string
-name
-=
-"
-credit_cards_warning_dialog_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Message
-of
-warning
-dialog
-if
-users
-have
-no
-device
-authentication
-set
-up
--
--
->
-<
-string
-name
-=
-"
-credit_cards_warning_dialog_message
-"
->
-PIN
-.
 <
 /
 string
@@ -23970,42 +22362,6 @@ string
 !
 -
 -
-Message
-displayed
-in
-biometric
-prompt
-for
-authentication
-before
-allowing
-users
-to
-use
-their
-stored
-credit
-card
-information
--
--
->
-<
-string
-name
-=
-"
-credit_cards_biometric_prompt_unlock_message
-"
->
-<
-/
-string
->
-<
-!
--
--
 Title
 of
 the
@@ -24077,90 +22433,6 @@ name
 =
 "
 addresses_manage_addresses
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-header
-for
-the
-first
-name
-of
-an
-address
--
--
->
-<
-string
-name
-=
-"
-addresses_first_name
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-header
-for
-the
-middle
-name
-of
-an
-address
--
--
->
-<
-string
-name
-=
-"
-addresses_middle_name
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-header
-for
-the
-last
-name
-of
-an
-address
--
--
->
-<
-string
-name
-=
-"
-addresses_last_name
 "
 >
 <
@@ -24496,36 +22768,6 @@ name
 addressess_delete_address_button
 "
 >
-<
-/
-string
->
-<
-!
--
--
-The
-title
-for
-the
-"
-Delete
-address
-"
-confirmation
-dialog
--
--
->
-<
-string
-name
-=
-"
-addressess_confirm_dialog_message
-"
->
-?
 <
 /
 string
@@ -25918,33 +24160,6 @@ string
 !
 -
 -
-Message
-in
-delete
-confirmation
-dialog
-for
-logins
--
--
->
-<
-string
-name
-=
-"
-login_deletion_confirmation
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
 Positive
 action
 of
@@ -25990,278 +24205,6 @@ name
 =
 "
 dialog_delete_negative
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-saved
-login
-options
-menu
-description
-.
--
--
->
-<
-string
-name
-=
-"
-login_options_menu
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-editable
-text
-field
-for
-a
-login
-'
-s
-web
-address
-.
--
--
->
-<
-string
-name
-=
-"
-saved_login_hostname_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-The
-editable
-text
-field
-for
-a
-login
-'
-s
-username
-.
--
--
->
-<
-string
-name
-=
-"
-saved_login_username_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-The
-editable
-text
-field
-for
-a
-login
-'
-s
-password
-.
--
--
->
-<
-string
-name
-=
-"
-saved_login_password_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-The
-button
-description
-to
-save
-changes
-to
-an
-edited
-login
-.
--
--
->
-<
-string
-name
-=
-"
-save_changes_to_login
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-The
-page
-title
-for
-editing
-a
-saved
-login
-.
--
--
->
-<
-string
-name
-=
-"
-edit
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-page
-title
-for
-adding
-new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-add_login
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-error
-message
-in
-add
-/
-edit
-login
-view
-when
-password
-field
-is
-blank
-.
--
--
->
-<
-string
-name
-=
-"
-saved_login_password_required
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-error
-message
-in
-add
-login
-view
-when
-username
-field
-is
-blank
-.
--
--
->
-<
-string
-name
-=
-"
-saved_login_username_required
 "
 >
 <
@@ -26690,6 +24633,13 @@ name
 "
 synced_tabs_no_tabs
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 .
@@ -27077,36 +25027,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
->
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -27481,6 +25401,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -27604,6 +25525,13 @@ name
 "
 firefox_suggest_header
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 <
@@ -27695,7 +25623,8 @@ string
 -
 Default
 browser
-experiment
+card
+text
 -
 -
 >
@@ -27705,6 +25634,13 @@ name
 =
 "
 default_browser_experiment_card_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -28013,6 +25949,13 @@ name
 =
 "
 pocket_stories_feature_caption
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
