--- a/mobile/android/focus-android/app/src/main/res/values-fur/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-fur/strings.xml
@@ -1402,50 +1402,6 @@ navigazion
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tocje
-o
-scancele
-cheste
-notifiche
-par
-elimin
-in
-m
-t
-sig
-r
-la
-t
-cronologjie
-di
-navigazion
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -1904,6 +1860,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 C
 r
@@ -1969,6 +1932,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 C
@@ -2037,6 +2007,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 C
@@ -2107,6 +2084,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 C
 r
@@ -2163,6 +2147,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -7174,6 +7165,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Siere
 <
@@ -8645,6 +8650,51 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+Siere
+ch
+s
+altris
+schedis
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -8703,6 +8753,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Discjame
@@ -8866,6 +8923,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -8990,6 +9054,14 @@ name
 =
 "
 your_rights_content3
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -9124,6 +9196,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -9264,6 +9343,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -12053,6 +12139,13 @@ name
 "
 preference_studies_summary
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 al
@@ -13342,60 +13435,6 @@ open_new_tab_snackbar
 >
 Passe
 a
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Da
-r
-a
-jentr
-in
-modalit
-t
-plen
-schermi
 <
 /
 string
@@ -14940,6 +14979,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -16141,6 +16187,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Par
 jessi
@@ -16190,6 +16250,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Par
 jessi
@@ -16204,6 +16278,140 @@ parsore
 e
 frache
 inda
+r
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Strissine
+di
+parsore
+e
+dopre
+il
+mot
+inda
+r
+par
+l
+f
+r
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Strissine
+di
+parsore
+e
+frache
+inda
+r
+par
+l
+f
 r
 <
 /
