--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-cs/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-cs/strings.xml
@@ -3322,6 +3322,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 P
 ipojen
@@ -3329,6 +3343,49 @@ k
 internetu
 nen
 dostupn
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Zd
+se
+e
+do
+lo
+k
+probl
+mu
+s
+p
+ipojen
+m
+k
+internetu
 <
 /
 string
@@ -3363,6 +3420,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Zkontrolujte
 p
@@ -3380,6 +3451,102 @@ znovu
 na
 st
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Zkuste
+se
+p
+ipojit
+na
+jin
+m
+za
+zen
+.
+Zkontrolujte
+modem
+nebo
+router
+.
+Odpojte
+se
+a
+znovu
+se
+p
+ipojte
+k
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+K
+d
+chyby
+:
+NS_ERROR_OFFLINE
 <
 /
 string
