--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-cy/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-cy/strings.xml
@@ -3228,8 +3228,64 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dim
+cysylltiad
+rhyngrwyd
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Mae
+\
+'
+n
+ymddangos
+bod
+problem
+gyda
+\
+'
+ch
 cysylltiad
 rhyngrwyd
 <
@@ -3266,6 +3322,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Gwiriwch
 eich
@@ -3282,6 +3352,96 @@ ymhen
 ychydig
 eiliadau
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Ceisiwch
+gysylltu
+ar
+ddyfais
+wahanol
+.
+Gwiriwch
+eich
+modem
+neu
+lwybrydd
+.
+Datgysylltwch
+ac
+ailgysylltwch
+\
+'
+r
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Cod
+Gwall
+:
+NS_ERROR_OFFLINE
 <
 /
 string
