--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fr/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fr/strings.xml
@@ -3364,10 +3364,64 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Aucune
 connexion
 internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Il
+semble
+y
+avoir
+un
+probl
+me
+avec
+votre
+connexion
+Internet
 <
 /
 string
@@ -3402,6 +3456,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 V
 rifiez
@@ -3419,6 +3487,105 @@ dans
 quelques
 instants
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Essayez
+de
+vous
+connecter
+sur
+un
+autre
+appareil
+.
+V
+rifiez
+votre
+modem
+ou
+votre
+routeur
+.
+D
+connectez
+-
+vous
+puis
+reconnectez
+-
+vous
+au
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Code
+d
+erreur
+:
+NS_ERROR_OFFLINE
 <
 /
 string
