--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fur/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fur/strings.xml
@@ -3422,8 +3422,64 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nissune
+conession
+a
+internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Al
+somee
+che
+al
+sedi
+presint
+un
+probleme
+cu
+la
 conession
 a
 internet
@@ -3461,6 +3517,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifiche
 la
@@ -3482,6 +3552,101 @@ cjari
 la
 pagjine
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Prove
+a
+conetiti
+di
+un
+altri
+disposit
+f
+controle
+il
+modem
+o
+il
+router
+.
+Disconetiti
+e
+torne
+a
+conetiti
+al
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Codi
+di
+er
+r
+:
+NS_ERROR_OFFLINE
 <
 /
 string
