--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-fy-rNL/strings.xml
@@ -3219,8 +3219,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Gjin
+ynternetferbining
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+It
+liket
+derop
+dat
+der
+in
+probleem
+is
+mei
+jo
 ynternetferbining
 <
 /
@@ -3256,6 +3310,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Kontrolearje
 jo
@@ -3271,6 +3339,96 @@ opnij
 te
 laden
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Probearje
+ferbining
+te
+meitsjen
+op
+in
+oar
+apparaat
+.
+Kontrolearje
+jo
+modem
+of
+router
+.
+Ferbrek
+jo
+wififerbining
+en
+meitsje
+opnij
+ferbining
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Flaterkoade
+:
+NS_ERROR_OFFLINE
 <
 /
 string
