--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-it/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-it/strings.xml
@@ -3182,8 +3182,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nessuna
+connessione
+a
+Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Sembra
+che
+ci
+sia
+un
+problema
+con
+la
 connessione
 a
 Internet
@@ -3221,6 +3275,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifica
 la
@@ -3238,6 +3306,97 @@ tra
 qualche
 istante
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Prova
+a
+connetterti
+da
+un
+altro
+dispositivo
+controlla
+il
+modem
+o
+il
+router
+disattiva
+e
+riattiva
+la
+connessione
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Codice
+di
+errore
+:
+NS_ERROR_OFFLINE
 <
 /
 string
