--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-pt-rBR/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-pt-rBR/strings.xml
@@ -3274,8 +3274,63 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sem
+conex
+o
+com
+a
+internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+h
+um
+problema
+na
+sua
 conex
 o
 com
@@ -3315,6 +3370,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifique
 sua
@@ -3332,6 +3401,95 @@ daqui
 a
 pouco
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Experimente
+se
+conectar
+usando
+outro
+dispositivo
+.
+Verifique
+seu
+modem
+ou
+roteador
+.
+Desconecte
+e
+reconecte
+ao
+WiFi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+erro
+:
+NS_ERROR_OFFLINE
 <
 /
 string
