--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-pt-rPT/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-pt-rPT/strings.xml
@@ -3293,8 +3293,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Sem
+liga
+o
+Internet
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Parece
+que
+existe
+um
+problema
+com
+a
+sua
 liga
 o
 Internet
@@ -3332,6 +3386,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Verifique
 a
@@ -3351,6 +3419,105 @@ de
 alguns
 momentos
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Tente
+ligar
+-
+se
+num
+dispositivo
+diferente
+.
+Verifique
+o
+seu
+modem
+ou
+router
+.
+Desligue
+-
+se
+e
+volte
+a
+ligar
+-
+se
+ao
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+C
+digo
+de
+erro
+:
+NS_ERROR_OFFline
 <
 /
 string
