--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sl/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sl/strings.xml
@@ -3099,10 +3099,64 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ni
 internetne
 povezave
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Videti
+je
+da
+obstaja
+te
+ava
+z
+va
+o
+internetno
+povezavo
 <
 /
 string
@@ -3137,6 +3191,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Preverite
 omre
@@ -3149,6 +3217,39 @@ nalo
 iti
 stran
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Koda
+napake
+:
+NS_ERROR_OFFLINE
 <
 /
 string
