--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-sv-rSE/strings.xml
@@ -3216,8 +3216,59 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ingen
+internetanslutning
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Det
+verkar
+finnas
+ett
+problem
+med
+din
 internetanslutning
 <
 /
@@ -3253,6 +3304,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Kontrollera
 din
@@ -3269,6 +3334,96 @@ om
 en
 stund
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Prova
+att
+ansluta
+p
+en
+annan
+enhet
+.
+Kontrollera
+ditt
+modem
+eller
+router
+.
+Koppla
+ner
+och
+teranslut
+till
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Felkod
+:
+NS_ERROR_OFFLINE
 <
 /
 string
