--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fur/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fur/strings.xml
@@ -4261,13 +4261,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4320,6 +4336,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4340,6 +4372,40 @@ instal
 cheste
 estension
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impussibil
+instal
+la
+estension
 <
 /
 string
@@ -4611,6 +4677,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Impussibil
 instal
@@ -4632,6 +4712,77 @@ stabilit
 t
 e
 sigurece
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+al
+viole
+lis
+politichis
+di
+Mozilla
+e
+nol
+pussibil
+instal
+lu
+in
+%
+2
+s
 .
 <
 /
@@ -4717,6 +4868,152 @@ supuartadis
 su
 cheste
 plateforme
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+1
+s
+al
+viole
+lis
+politichis
+di
+Mozilla
+e
+nol
+pussibil
+instal
+lu
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+al
+viole
+lis
+politichis
+di
+Mozilla
+e
+nol
+pussibil
+instal
+lu
+in
+%
+2
+s
 .
 <
 /
@@ -5763,6 +6060,43 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Vi
+t
+i
+detais
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5805,6 +6139,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5824,6 +6172,308 @@ o
 di
 stabilit
 t
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Cheste
+estension
+e
+je
+blocade
+parc
+che
+e
+viole
+lis
+politichis
+di
+Mozilla
+e
+e
+je
+stade
+disativade
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cheste
+estension
+e
+viole
+lis
+politichis
+di
+Mozilla
+e
+e
+je
+stade
+disativade
+.
+Tu
+puedis
+torn
+a
+ativ
+le
+ma
+al
+pussibil
+che
+al
+compuarti
+cualchi
+risi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Cheste
+estension
+e
+je
+limitade
+parc
+che
+e
+viole
+lis
+politichis
+di
+Mozilla
+e
+e
+je
+stade
+disativade
+.
+Tu
+puedis
+torn
+a
+ativ
+le
+ma
+al
+pussibil
+che
+al
+compuarti
+cualchi
+risi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Cheste
+estension
+e
+viole
+lis
+politichis
+di
+Mozilla
+.
+La
+s
+utilizazion
+e
+podar
+s
+compuart
+cualchi
+risi
 .
 <
 /
